# qa_logs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: qa-logs.yml
config/: instances.yaml  module_map.yaml  report.yaml
docs/: bitrix-github-trigger.md
scripts/: bitrix_notify.py  bitrix_webhook_server.py  github_actions_runner.py  github_dispatch.py
src/qa_release_bot/: __init__.py  analyst_pdf.py  analyzer.py  api_http.py  bot.py  classifier.py  cli.py  client.py  compare.py  config.py  explainer.py  export_paths.py  fetcher.py  glitchtip_levels.py  grouper.py  html_dates.py  html_report.py  issue_analysis.py  issue_explain.py  issue_explain_summary.py  issue_history.py  issue_plain_explain.py  issue_record.py  issue_titles.py  logging_setup.py  markdown_report.py  models.py  (+26 more)
tests/: test_analyst_pdf.py  test_analyst_pipeline.py  test_analyzer.py  test_api_retry.py  test_compare.py  test_daily_digest.py  test_export_paths.py  test_github_dispatch.py  test_glitchtip_levels.py  test_group_by_title.py  test_grouper.py  test_html_dates.py  test_html_report.py  test_issue_analysis.py  test_issue_explain.py  test_issue_explain_summary.py  test_issue_plain_explain.py  test_issue_titles.py  test_new_issue_watch.py  test_new_issue_watch_today.py  test_new_issues.py  test_new_issues_today.py  test_normalizer.py  test_pdf_report.py  test_projects_notify.py  test_report_builder.py  test_summary_html.py  test_summary_html_paths.py  test_summary_levels_html.py  test_summary_new_today_html.py  test_summary_report.py  test_taxonomy.py  test_textfmt.py
